--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 
     <section id="feature" class="section-p1">
         <div class="fe-box">
-            <img src="Images/features/f1.png" alt="">
+            <img src="products/f1.png" alt="">
             <h6>Free Shipping</h6>
         </div>
 
         <div class="fe-box">
-            <img src="Images/features/f2.png" alt="">
+            <img src="products/f2.png" alt="">
             <h6>Online Order</h6>
         </div>
 
         <div class="fe-box">
-            <img src="Images/features/f3.png" alt="">
+            <img src="products/f3.png" alt="">
             <h6>Save Money</h6>
         </div>
 
